@@ -1,5 +1,9 @@
 LIST OF CHANGES
 
+ - reference finder for compositions not to return
+   a PhiX reference when at least one other reference
+   is found
+
 release 90.1.0
  - no_archive attribute for run folder API
 
